# RoboController

./: .gitignore  README.md  robo.jks  settings.gradle  versions.gradle
app/: build.gradle
app/libs/: xgesturelibrary-debug.aar
app/src/androidTest/java/com/ubt/robocontroller/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/ubt/robocontroller/: IUVCService.aidl  IUVCServiceCallback.aidl  IUVCServiceOnFrameAvailable.aidl  IUVCSlaveService.aidl
app/src/main/cpp/: CMakeLists.txt  aloop.cpp  android_utils.cpp  robocontroller.cpp
app/src/main/cpp/include/: LogUtil.h  apple.h  touchscreen.h
app/src/main/java/com/ubt/robocontroller/: AiManager.kt  BootBroadcastReceiver.kt  CameraXPreviewFragment.kt  Config.kt  CrashHandler.java  MainActivity.kt  MarkView.kt  PreferenceStorage.kt  RadarView.kt  RoboApp.kt  TouchManager.kt  UVCActivity.kt  UVCConfig.kt
app/src/main/java/com/ubt/robocontroller/utils/: FileUtil.kt  MarkUtil.kt
app/src/main/java/com/ubt/robocontroller/uvc/: AspectRatioViewInterface.java  Encoder.java  SimpleUVCCameraTextureView.java  SurfaceEncoder.java  UVCTest2Activity.kt  UsbCameraFragment.kt  UvcFragment.kt
app/src/main/java/com/ubt/robocontroller/uvc/service/: CameraServer.java  UVCService.java
app/src/main/java/com/ubt/robocontroller/uvc/serviceclient/: CameraClient.java  (+2 more)
app/src/main/java/com/ubt/robocontroller/widgets/: UVCTextureView.kt
app/src/main/res/layout/: activity_main.xml  activity_uvc_test2.xml  activity_uvc_test22.xml  activity_uvcactivity.xml  fragment_usb_camera.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/ubt/robocontroller/: ExampleUnitTest.kt
camera/: build.gradle
camera/src/main/java/xh/zero/camera/: BaseCameraFragment.kt  CameraXFragment.kt
docs/: 表面触控自动标定方案20230210_2.docx  触控服务UML.mdj
gradle/wrapper/: gradle-wrapper.properties
libuvccamera/: build.gradle
libuvccamera/src/main/java/com/serenegiant/usb/: UVCCamera.java
sign/: debug.keystore  test.jks
usbCameraCommon/: build.gradle
